test/driver/max_errors2.p
//# RUN: peony -fmax-errors=0 %s

// -fmax-errors=0 allows an unlimited number of errors
% //~ ERROR: unexpected token, found '%'
% //~ ERROR: unexpected token, found '%'
% //~ ERROR: unexpected token, found '%'
